--- a/templates/src/css/sass/utilities/_text.scss
+++ b/templates/src/css/sass/utilities/_text.scss
@@ -34,23 +34,14 @@
 
 // Family
 //
-.font-family-barlowsemicondensed { font-family: $font-family-rc-barlowsemicondensed; }
-.font-family-lunchbox { font-family: $font-family-rc-lunchbox; }
+.font-family-opensans { font-family: $font-family-rh-opensans; }
+.font-family-colaborate { font-family: $font-family-rh-colaborate; }
 
 // Colors
 //
 .text-black { color: $color-black !important; }
 .text-white { color: $color-white !important; }
-
-.text-rc-black { color: $color-rc-black !important; }
-.text-rc-aubergine { color: $color-rc-aubergine !important; }
-.text-rc-candy { color: $color-rc-candy !important; }
-.text-rc-flame { color: $color-rc-flame !important; }
-.text-rc-spark { color: $color-rc-spark !important; }
-.text-rc-sunny { color: $color-rc-sunny !important; }
-.text-rc-sage { color: $color-rc-sage !important; }
-.text-rc-moss { color: $color-rc-moss !important; }
-.text-rc-dream { color: $color-rc-dream !important; }
-.text-rc-dive { color: $color-rc-dive !important; }
-.text-rc-blue { color: $color-rc-blue !important; }
+.text-rh-black { color: $color-rh-black !important; }
+.text-rh-blue { color: $color-rh-blue !important; }
+.text-rh-yellow { color: $color-rh-yellow !important; }
 .text-primary { color: $color-primary !important; }
