--- a/templates/src/pages/styleguide-colours.hbs
+++ b/templates/src/pages/styleguide-colours.hbs
@@ -26,34 +26,18 @@ layout: styleguide
         <div class="styleguide-colours-bg">
           <div class="bg-black text-white">.bg-black</div>
           <div class="bg-white text-black">.bg-white</div>
-          <div class="bg-rc-black text-white">.bg-rc-black</div>
-          <div class="bg-rc-aubergine">.bg-rc-aubergine</div>
-          <div class="bg-rc-candy">.bg-rc-candy</div>
-          <div class="bg-rc-flame">.bg-rc-flame</div>
-          <div class="bg-rc-spark">.bg-rc-spark</div>
-          <div class="bg-rc-sunny">.bg-rc-sunny</div>
-          <div class="bg-rc-sage">.bg-rc-sage</div>
-          <div class="bg-rc-moss">.bg-rc-moss</div>
-          <div class="bg-rc-dream">.bg-rc-dream</div>
-          <div class="bg-rc-dive">.bg-rc-dive</div>
-          <div class="bg-rc-blue">.bg-rc-blue</div>
-          <div class="bg-rc-primary">.bg-rc-primary</div>
+          <div class="bg-rh-black text-white">.bg-rh-black</div>
+          <div class="bg-rh-yellow">.bg-rh-yellow</div>
+          <div class="bg-rh-blue">.bg-rh-blue</div>
+          <div class="bg-primary">.bg-primary</div>
         </div>
         <div class="styleguide-colours-bg">
           <div class="text-black">.text-black</div>
           <div class="bg-black text-white">.text-white</div>
-          <div class="text-rc-black">.text-rc-black</div>
-          <div class="text-rc-aubergine">.text-rc-aubergine</div>
-          <div class="text-rc-candy">.text-rc-candy</div>
-          <div class="text-rc-flame">.text-rc-flame</div>
-          <div class="text-rc-spark">.text-rc-</div>
-          <div class="text-rc-sunny">.text-rc-sunny</div>
-          <div class="text-rc-sage">.text-rc-sage</div>
-          <div class="text-rc-moss">.text-rc-moss</div>
-          <div class="text-rc-dream">.text-rc-dream</div>
-          <div class="text-rc-dive">.text-rc-dive</div>
-          <div class="text-rc-blue">.text-rc-blue</div>
-          <div class="text-rc-primary">.text-rc-primary</div>
+          <div class="text-rh-black">.text-rh-black</div>
+          <div class="text-rh-yellow">.text-rh-yellow</div>
+          <div class="text-rh-blue">.text-rh-blue</div>
+          <div class="text-primary">.text-primary</div>
         </div>
       </div>
     </div>
