--- a/templates/src/pages/styleguide-typography.hbs
+++ b/templates/src/pages/styleguide-typography.hbs
@@ -23,7 +23,7 @@ layout: styleguide
 
     <h2 class="styleguide-h2">Headings</h2>
     <div class="styleguide-example">
-      <p class="h6">Heading text font is <strong class="h4">LunchBox</strong></p>
+      <p class="h6">Heading text font is <strong class="h4">Colaborate Bold</strong></p>
       <table class="styleguide-table mb-md" width="100%">
         <thead>
           <tr>
@@ -36,37 +36,37 @@ layout: styleguide
         <tbody>
           <tr>
             <td class="h1">h1</td>
-            <td>LunchBox Bold</td>
+            <td>Colaborate Bold</td>
             <td>48px</td>
-            <td>58px</td>
+            <td>48px</td>
           </tr>
           <tr>
             <td class="h2">h2</td>
-            <td>LunchBox Bold</td>
+            <td>Colaborate Bold</td>
             <td>30px</td>
-            <td>34px</td>
+            <td>30px</td>
           </tr>
           <tr>
             <td class="h3">h3</td>
-            <td>LunchBox Bold</td>
+            <td>Colaborate Bold</td>
             <td>28px</td>
-            <td>30px</td>
+            <td>28px</td>
           </tr>
           <tr>
             <td class="h4">h4</td>
-            <td>LunchBox Bold</td>
+            <td>Colaborate Bold</td>
             <td>26px</td>
-            <td>28px</td>
+            <td>26px</td>
           </tr>
           <tr>
             <td class="h5">h5</td>
-            <td>LunchBox Regular</td>
+            <td>Colaborate SemiBold</td>
             <td>26px</td>
-            <td>28px</td>
+            <td>26px</td>
           </tr>
           <tr>
             <td class="h6">h6</td>
-            <td>LunchBox Light</td>
+            <td>Colaborate SemiBold</td>
             <td>26px</td>
             <td>28px</td>
           </tr>
