--- a/templates/src/pages/styleguide-utilities.hbs
+++ b/templates/src/pages/styleguide-utilities.hbs
@@ -45,33 +45,33 @@ layout: styleguide
 
     <h3 class="styleguide-h3">Examples that applies to all breakpoints</h3>
     <div class="styleguide-example">
-      <div class="d-inline bg-rc-candy text-white p-2">d-inline</div>
-      <div class="d-inline bg-rc-flame text-white p-2">d-inline</div>
+      <div class="d-inline bg-primary text-white p-2">d-inline</div>
+      <div class="d-inline bg-primary text-white p-2">d-inline</div>
     </div>
     <div class="styleguide-code">
-      <pre><code>&#x3C;div class=&#x22;d-inline bg-rc-candy text-white p-2&#x22;&#x3E;d-inline&#x3C;/div&#x3E;
-&#x3C;div class=&#x22;d-inline bg-rc-flame text-white p-2&#x22;&#x3E;d-inline&#x3C;/div&#x3E;</code></pre>
+      <pre><code>&#x3C;div class=&#x22;d-inline bg-primary text-white p-2&#x22;&#x3E;d-inline&#x3C;/div&#x3E;
+&#x3C;div class=&#x22;d-inline bg-primary text-white p-2&#x22;&#x3E;d-inline&#x3C;/div&#x3E;</code></pre>
     </div>
 
     <div class="styleguide-example">
-      <div class="d-block bg-rc-candy text-white p-2">d-block</div>
-      <div class="d-block bg-rc-flame text-white p-2">d-block</div>
+      <div class="d-block bg-primary text-white p-2">d-block</div>
+      <div class="d-block bg-primary text-white p-2">d-block</div>
     </div>
     <div class="styleguide-code">
-      <pre><code>&#x3C;div class=&#x22;d-block bg-rc-candy text-white p-2&#x22;&#x3E;d-block&#x3C;/div&#x3E;
-&#x3C;div class=&#x22;d-block bg-rc-flame text-white p-2&#x22;&#x3E;d-block&#x3C;/div&#x3E;</code></pre>
+      <pre><code>&#x3C;div class=&#x22;d-block bg-primary text-white p-2&#x22;&#x3E;d-block&#x3C;/div&#x3E;
+&#x3C;div class=&#x22;d-block bg-primary text-white p-2&#x22;&#x3E;d-block&#x3C;/div&#x3E;</code></pre>
     </div>
 
     <h3 class="styleguide-h3">Breakpoint examples</h3>
     <div class="styleguide-example">
-      <div class="d-md-none bg-rc-candy text-white p-2">d-md-none</div>
-      <div class="d-lg-none bg-rc-flame text-white p-2">d-lg-none</div>
-      <div class="d-none d-md-block bg-rc-spark text-white p-2">d-none d-md-block</div>
+      <div class="d-md-none bg-primary text-white p-2">d-md-none</div>
+      <div class="d-lg-none bg-primary text-white p-2">d-lg-none</div>
+      <div class="d-none d-md-block bg-primary text-white p-2">d-none d-md-block</div>
     </div>
     <div class="styleguide-code">
-      <pre><code>&#x3C;div class=&#x22;d-md-none bg-rc-candy text-white p-2&#x22;&#x3E;d-md-none&#x3C;/div&#x3E;
-&#x3C;div class=&#x22;d-lg-none bg-rc-flame text-white p-2&#x22;&#x3E;d-md-none&#x3C;/div&#x3E;
-&#x3C;div class=&#x22;d-none d-md-block bg-rc-spark text-white p-2&#x22;&#x3E;d-md-none&#x3C;/div&#x3E;</code></pre>
+      <pre><code>&#x3C;div class=&#x22;d-md-none bg-primary text-white p-2&#x22;&#x3E;d-md-none&#x3C;/div&#x3E;
+&#x3C;div class=&#x22;d-lg-none bg-primary text-white p-2&#x22;&#x3E;d-md-none&#x3C;/div&#x3E;
+&#x3C;div class=&#x22;d-none d-md-block bg-primary text-white p-2&#x22;&#x3E;d-md-none&#x3C;/div&#x3E;</code></pre>
     </div>
   </section>
 
