--- a/templates/src/_layouts/default.hbs
+++ b/templates/src/_layouts/default.hbs
@@ -5,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{{ title }}} | Real Help</title>
     {{!-- START: Preload --}}
-    <link rel="preload" href="assets/barlowsemicondensed-bold.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="assets/barlowsemicondensed-bold.woff" as="font" type="font/woff">
-    <link rel="preload" href="assets/barlowsemicondensed-light.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="assets/barlowsemicondensed-light.woff" as="font" type="font/woff">
-    <link rel="preload" href="assets/barlowsemicondensed-regular.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="assets/barlowsemicondensed-regular.woff" as="font" type="font/woff">
-    <link rel="preload" href="assets/373e2d-bold.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="assets/373e2d-bold.woff" as="font" type="font/woff">
-    <link rel="preload" href="assets/373e2d-light.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="assets/373e2d-light.woff" as="font" type="font/woff">
-    <link rel="preload" href="assets/373e2d-regular.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="assets/373e2d-regular.woff" as="font" type="font/woff">
+    <link rel="preload" href="assets/open-sans-v15-latin-300.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="assets/open-sans-v15-latin-300.woff" as="font" type="font/woff">
+    <link rel="preload" href="assets/open-sans-v15-latin-600.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="assets/open-sans-v15-latin-600.woff" as="font" type="font/woff">
+    <link rel="preload" href="assets/open-sans-v15-latin-700.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="assets/open-sans-v15-latin-700.woff" as="font" type="font/woff">
+    <link rel="preload" href="assets/open-sans-v15-latin-regular.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="assets/open-sans-v15-latin-regular.woff" as="font" type="font/woff">
+    <link rel="preload" href="assets/colaborate-bold.woff" as="font" type="font/woff">
+    <link rel="preload" href="assets/colaborate-medium.woff" as="font" type="font/woff">
     {{!-- END: Preload --}}
     <link href="{{ project.shortname }}.css" rel="stylesheet">
   </head>
