--- a/templates/src/css/sass/_type.scss
+++ b/templates/src/css/sass/_type.scss
@@ -136,7 +136,7 @@ mark,
     position: relative;
 
     &:before {
-      color: $color-rc-yellow;
+      color: $color-rh-yellow;
       content: "•";
       line-height: 1.3;
       left: 1rem;
@@ -164,7 +164,7 @@ mark,
 }
 
 blockquote {
-  color: $color-rc-spark;
+  color: $color-rh-yellow;
   font-size: ($font-size-base * 1.4444444444); // 26px
   font-weight: 300;
   line-height: 1.3076923077; // 34px
