--- a/templates/src/css/sass/_variables.scss
+++ b/templates/src/css/sass/_variables.scss
@@ -21,19 +21,10 @@ $color-border: #E3E3E3;
 
 // Brand Colors
 //
-$color-rc-black: #1D1D1C;
-$color-rc-aubergine: #B7528F;
-$color-rc-candy: #E96187;
-$color-rc-flame: #E95041;
-$color-rc-spark: #EE7C19;
-$color-rc-sunny: #FBBF09;
-$color-rc-sage: #909B23;
-$color-rc-moss: #388269;
-$color-rc-dream: #48BEDE;
-$color-rc-dive: #5E71BA;
-$color-rc-yellow: #FFC300;
-$color-rc-blue: #2FA0BC;
-$color-primary: $color-rc-yellow;
+$color-rh-black: #1D1D1C;
+$color-rh-yellow: #FFE500;
+$color-rh-blue: #2F87C8;
+$color-primary: $color-rh-yellow;
 
 //
 // Grid breakpoints
@@ -72,9 +63,9 @@ $body-color: $color-black-sec;
 //
 // Links
 //
-$link-color: $color-rc-dive;
+$link-color: $color-rh-blue;
 $link-decoration: underline;
-$link-hover-color: darken($color-rc-dive, 15%);
+$link-hover-color: darken($link-color, 15%);
 $link-hover-decoration: none;
 
 //
@@ -83,9 +74,9 @@ $link-hover-decoration: none;
 // TODO: Base fallback font
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Verdana, Geneva, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-$font-family-rc-barlowsemicondensed: "Barlow Semi Condensed";
-$font-family-rc-lunchbox: "Lunchbox";
-$font-family-base: $font-family-rc-barlowsemicondensed, $font-family-sans-serif;
+$font-family-rh-colaborate: "Colaborate";
+$font-family-rh-opensans: "Open Sans";
+$font-family-base: $font-family-rh-opensans, $font-family-sans-serif;
 
 $font-size-html: 16px;
 $font-size-base: 1.125rem; // 18px
@@ -99,38 +90,39 @@ $font-size-xl: ($font-size-base * 1.5555555556); // 28px
 $font-weight-base: 400;
 $font-weight-light: 300;
 $font-weight-normal: 400;
+$font-weight-semibold: 500;
 $font-weight-bold: 700;
 
 $line-height-base: 1.5;
 $line-height-sm: 1.2857142857;
 
 $headings-color: inherit;
-$headings-font-family: $font-family-rc-lunchbox, $font-family-sans-serif;
+$headings-font-family: $font-family-rh-colaborate, $font-family-sans-serif;
 $headings-font-weight: 700;
 $headings-margin-bottom: 0.5rem;
 
 $h1-font-size: ($font-size-base * 2.6666666667); // 48px
-$h1-font-size-md: ($font-size-base * 3.2222222222); // 58px
+$h1-font-size-md: ($font-size-base * 2.6666666667); // 48px
 $h1-line-height: 1.125; // 54px
-$h1-line-height-md: 1.1034482759; // 64px
+$h1-line-height-md: 1.125; // 54px
 
 $h2-font-size: ($font-size-base * 1.6666666667); // 30px
-$h2-font-size-md: ($font-size-base * 1.8888888889); // 34px
-$h2-line-height: 1.1764705882; // 40px
+$h2-font-size-md: ($font-size-base * 1.6666666667); // 30px
+$h2-line-height: 1.2; // 36px
 $h2-line-height-md: 1.2; // 36px
 
 $h3-font-size: ($font-size-base * 1.5555555556); // 28px
-$h3-font-size-md: ($font-size-base * 1.6666666667); // 30px
+$h3-font-size-md: ($font-size-base * 1.5555555556); // 28px
 $h3-line-height: 1.2142857143; // 34px
-$h3-line-height-md: 1.2; // 36px
+$h3-line-height-md: 1.2142857143; // 34px
 
 $h4h5h6-font-size: ($font-size-base * 1.4444444444); // 26px
-$h4h5h6-font-size-md: ($font-size-base * 1.5555555556); // 28px
+$h4h5h6-font-size-md: ($font-size-base * 1.4444444444); // 26px
 $h4h5h6-line-height: 1.2307692308; // 32px
-$h4h5h6-line-height-md: 1.2142857143; // 34px
+$h4h5h6-line-height-md: 1.2307692308; // 32px
 
-$h5-font-weight: 400;
-$h6-font-weight: 300;
+$h5-font-weight: 500;
+$h6-font-weight: 500;
 
 $paragraph-margin-bottom: 0.5rem;
 $paragraph-lg-font-size: ($font-size-base * 1.1111111111); // 20px
@@ -142,7 +134,7 @@ $small-font-size: 80%;
 $small-font-weight: $font-weight-normal;
 
 $mark-padding: .2em;
-$mark-bg: $color-rc-yellow;
+$mark-bg: $color-rh-yellow;
 
 $text-muted: $color-grey-medium; // TODO
 
@@ -169,7 +161,7 @@ $form-vertical-spacer: 1.5rem;
 
 // Buttons
 //
-$button-font-family: $font-family-rc-lunchbox, $font-family-base;
+$button-font-family: $font-family-rh-colaborate, $font-family-base;
 $button-font-weight: $font-weight-bold;
 $button-padding: 0.5rem 1.625rem;
 $button-padding-md: 0.5rem 2rem;
