--- a/templates/src/css/sass/styleguide.scss
+++ b/templates/src/css/sass/styleguide.scss
@@ -14,8 +14,8 @@ a {
 }
 
 .styleguide-header {
-  background-color: $color-rc-sunny;
-  color: $color-white;
+  background-color: darken($color-rh-yellow,5%);
+  color: $color-black;
   margin-bottom: 2rem;
 
   .container {
@@ -38,7 +38,7 @@ a {
 
   a {
     align-items: center;
-    color: $color-white;
+    color: $color-black;
     display: flex;
     justify-content: space-between;
     text-decoration: none;
@@ -184,7 +184,7 @@ a {
 
     + li::before {
       align-self: flex-start;
-      color: $color-rc-sunny;
+      color: $color-rh-yellow;
       content: "/";
       display: inline-block;
       padding-left: 0.5rem;
