--- a/hugo/layouts/stories/stories.html
+++ b/hugo/layouts/stories/stories.html
@@ -15,10 +15,10 @@
   {{ end }}
   {{ end }}
 
-  <section class="section home-stories bg-rc-aubergine edge edge-top edge-rc-aubergine-top">
+  <section class="section home-stories">
     <div class="container">
       <div class="home-stories-header">
-        <h2 class="h1 home-stories-title bg-rc-sunny">
+        <h2 class="h1 home-stories-title">
           {{ with .Site.GetPage "section" "stories" }}{{ .Params.heading }}{{ end }}
         </h2>
       </div>
@@ -26,7 +26,7 @@
   {{ range (where .Site.RegularPages.ByDate.Reverse "Section" "stories") }}
   <div class="card-story card-stroy-witharrow">
     <h3 class="card-story-title">{{ .Params.summary.heading }}</h3>
-    <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+    <div class="card-story-image aspect aspect-5by2">
       <img alt="" src="{{ .Params.summary.image }}">
     </div>
     <a class="card-story-cta" href="{{ .Permalink }}">{{ .Params.summary.text }}</a>
