--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -73,7 +73,7 @@ header_nav_home: true
   <section class="section home-partners">
     <div class="container">
       <div class="home-partners-header">
-        <h2 class="h1 home-partners-title">{{> icon-like icon-like__height="44" icon-like__width="44" }} Help from our Partners</h2>
+        <h2 class="h1 home-partners-title">Help from our Partners</h2>
       </div>
       <div class="home-partners-media aspect-bg aspect-bg-2by1">
         <div class="aspect aspect-2by1">
