--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -66,7 +66,7 @@ header_nav_howitworks: true
   <section class="section">
     <div class="container">
       <div class="content">
-        <h3>{{> icon-checked icon-checked__height="44" icon-checked__width="44" }}  How will my donation be spent?</h3>
+        <h3>How will my donation be spent?</h3>
         <p>Your donation joins the central Real Change funding pot. <strong><a href="#">Local charities</a></strong> and organisations work directly with individuals who are homeless, and apply for funds to pay for items they need. Depending on the amount needed, there are two levels of fund requests:</p>
         <div class="cards cards-2up">
           <div class="card bg-white">
