--- a/templates/src/_components/button/_button.scss
+++ b/templates/src/_components/button/_button.scss
@@ -4,7 +4,7 @@
 .button {
   background-color: $color-white;
   border: 1px solid transparent;
-  border-radius: 0;
+  border-radius: 24px;
   box-shadow: 0 2px 6px 0 rgba(0,0,0,0.50);
   color: $color-black;
   cursor: pointer;
