--- a/templates/src/_components/card/_card.scss
+++ b/templates/src/_components/card/_card.scss
@@ -20,7 +20,7 @@
 }
 
 .card-title {
-  font-family: $font-family-rc-barlowsemicondensed;
+  font-family: $font-family-rh-opensans;
   font-size: ($font-size-base * 1.1111111111); // 20px
   line-height: 1.3; // 26px
 
@@ -65,7 +65,7 @@
 }
 
 .card-story-title {
-  font-family: $font-family-rc-barlowsemicondensed;
+  font-family: $font-family-rh-opensans;
   font-size: ($font-size-base * 1.1111111111); // 20px
 
   order: 2;
