--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -2,6 +2,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>{{.Title}} {{.Site.Title}}</title>
-{{ $styleMain := resources.Get "realchange.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
+{{ $styleMain := resources.Get "realhelp.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
