--- a/templates/src/_components/header/_header.scss
+++ b/templates/src/_components/header/_header.scss
@@ -17,160 +17,59 @@
 }
 
 .header {
-  background-color: $color-rc-sunny;
-  background-position: 50% 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: $color-white-sec;
+  background-color: $color-white;
+  color: #666666;
   font-size: $font-size-sm;
   line-height: $line-height-sm;
 
   @include media-breakpoint-up(md) {
-    font-size: $font-size-base;
+    font-size: $font-size-md;
     line-height: $line-height-base;
-  }
-
-  // decor-bottom
-  &::after {
-    z-index: 50;
-  }
-}
-
-.header-wrap {
-  overflow: hidden;
-  padding-bottom: 1rem;
-  position: relative;
-
-  @include media-breakpoint-up(md) {
-    padding-bottom: 1.5rem;
-  }
-
-  &::before {
-    background-color: $color-rc-dive;
-    bottom: 0;
-    content: "";
-    display: block;
-    left: 172px;
-    margin-right: -400px;
-    position: absolute;
-    right: 50%;
-    top: 0;
-    transform: skew(-44deg, 0deg);
-    transform-origin: 0 0;
-    user-select: none;
-    z-index: 1;
-
-    @include media-breakpoint-up(sm) {
-      left: 252px;
-      margin-right: 0;
-      right: -152px;
-    }
-
-    @include media-breakpoint-up(md) {
-      margin-left: -52px;
-      left: 50%;
-    }
-    
-    @include media-breakpoint-up(lg) {
-      margin-left: -152px;
-      right: -100px;
-    }
-
-    @include media-breakpoint-up(xl) {
-      right: 0;
-    }
   }
 }
 
 .header-inner {
   @include container;
-  display: flex;
-  flex-wrap: wrap;
   max-width: 1024px;
-  overflow: hidden;
-  position: relative;
-  z-index: 50;
+
+  @media (min-width: $breakpoint-mobile-nav) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .header-brand {
+  padding: 1rem 0.625rem; // 16px 10px
+
+  @include media-breakpoint-up(md) {
+    padding-bottom: 1.375rem; // 22px
+    padding-top: 1.375rem; // 22px
+  }
+
   a {
     color: $color-black;
     text-decoration: none;
   }
 }
 
-.header-brand-inner {
-  align-items: flex-end;
-  display: inline-flex;
-  height: 80px;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  vertical-align: top;
-  width: 65px;
-
-  @include media-breakpoint-up(sm) {
-    height: 118px;
-    margin-left: 0.75rem;
-    margin-right: 0.75rem;
-    width: 96px;
-  }
-
-  @include media-breakpoint-up(md) {
-    height: 160px;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    width: 130px;
-  }
-}
-
-.header-brand-subtitle {
-  font-family: $font-family-rc-lunchbox;
-  font-size: $font-size-sm;
-  font-weight: $font-weight-bold;
-  margin-top: 4px;
-  text-align: center;
-
-  @include media-breakpoint-up(sm) {
-    font-size: $font-size-base;
-    margin-top: 2px;
-  }
-
-  @include media-breakpoint-up(md) {
-    font-size: $font-size-xl;
-  }
-}
-
 .header-brand-logo {
-  height: 63px;
-  margin-bottom: -1px;
-  margin-left: -1px;
+  height: auto;
   max-width: 100%;
-  width: 55px;
-
-  @include media-breakpoint-up(sm) {
-    height: 94px;
-    width: 82px;
-  }
+  width: 171px;
 
   @include media-breakpoint-up(md) {
-    height: 126px;
-    width: 110px;
+    height: 44px;
+    width: 200px;
   }
 }
 
 .header-body {
+  background-color: #F5F5F5;
   margin-left: auto;
-  padding-right: 0.5rem;
-  padding-top: 1.125rem;
 
-  @include media-breakpoint-down(sm) {
-    flex: 1 1 0%;
-    text-align: right;
-  }
-
-  @include media-breakpoint-up(md) {
-    padding-right: 1rem;
-    padding-top: 2.125rem;
+  @media (min-width: $breakpoint-mobile-nav) {
+    background-color: transparent;
+    display: flex;
   }
 }
 
@@ -178,34 +77,38 @@
   align-items: center;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   list-style: none;
   margin-bottom: 0;
-  padding-left: 0;
+  padding: 1rem 0 0.5rem;
 
-  @include media-breakpoint-down(sm) {
+  @media (min-width: $breakpoint-mobile-nav) {
     justify-content: flex-end;
+    padding: 0.5rem 0;
   }
 
   li {
-    margin-bottom: 0.25rem;
-  }
+    margin-bottom: 0.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 
-  li + li {
-    margin-left: 0.25rem;
-
-    @include media-breakpoint-up(sm) {
+    @media (min-width: $breakpoint-mobile-nav) {
+      margin-bottom: 0;
       margin-left: 0.375rem;
+      margin-right: 0.375rem;
     }
 
     @include media-breakpoint-up(md) {
       margin-left: 0.5rem;
+      margin-right: 0.5rem;
     }
   }
 
-  a {
-    color: $color-black;
+  a:not(.button) {
+    color: #666666;
     display: block;
-    font-weight: $font-weight-bold;
+    font-family: $font-family-rh-colaborate;
+    font-weight: $font-weight-semibold;
     padding: 0.25rem 0.175rem;
     text-decoration: none;
 
@@ -215,29 +118,47 @@
     }
 
     @include hover {
-      color: $color-white;
+      color: #444444;
     }
   }
 
   .header-nav-active {
     a {
-      // color: $color-white;
       text-decoration: underline;
     }
   }
 
   .header-nav-donate {
-    margin-left: 0.5rem;
+    margin: 0.5rem 1rem 1rem;
+    flex: 1 1 100%;
+    text-align: center;
+    width: 100%;
+
+    @media (min-width: 310px) and (max-width: #{$breakpoint-mobile-nav - 1}) {
+      flex: none;
+      margin: 0;
+      position: absolute;
+      right: 1rem;
+      top: 1.125rem;
+      width: auto;
+    }
+
+    @media (min-width: $breakpoint-mobile-nav) {
+      flex: 0;
+      margin: -2px 0.5rem 0 0.5rem;
+      width: auto;
+    }
 
     @include media-breakpoint-up(md) {
-      margin-left: 1rem;
-      margin-top: -2px;
+      margin-top: -4px;
     }
 
     a {
-      font-size: $font-size-base;
+      border-radius: 18px;
+      font-size: $font-size-md;
       line-height: 1.1111111111;
-      padding: 0.1875rem 0.75rem;
+      min-width: 100px;
+      padding: 0.5rem 0.75rem;
 
       &:focus,
       &:hover {
@@ -245,55 +166,10 @@
       }
 
       @include media-breakpoint-up(md) {
-        font-size: $font-size-lg;
-        padding: 0.375rem 2rem 0.125rem 2rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        min-width: 140px;
       }
-    }
-  }
-}
-
-.header-hero {
-  flex: 1 0 100%;
-  padding: 1rem 3rem 2rem;
-  order: 4;
-  text-align: center;
-
-  @include media-breakpoint-up(sm) {
-    margin-top: -3rem;
-  }
-
-  @include media-breakpoint-up(md) {
-    margin-top: -5rem;
-  }
-}
-
-.header-hero-title {
-  font-size: 40px;
-  line-height: 1;
-  margin-bottom: 0;
-
-  @include media-breakpoint-up(sm) {
-    margin-left: 5rem;
-    margin-right: 5rem;
-  }
-
-  @include media-breakpoint-up(md) {
-    margin-left: 8rem;
-    margin-right: 8rem;
-  }
-
-  span {
-    display: block;
-  }
-
-  strong {
-    display: block;
-    // margin-left: -1rem;
-    // margin-right: -1rem;
-    font-size: 58px;
-  
-    @include media-breakpoint-up(md) {
-      font-size: 70px;
     }
   }
 }
