--- a/templates/src/_components/header/header.hbs
+++ b/templates/src/_components/header/header.hbs
@@ -1,33 +1,20 @@
 <header class="header{{#if header__classes}} {{header__classes}}{{/if}}" role="banner"{{#if header__style}} style="{{header__style}}"{{/if}}>
   <a class="header-skip" href="#main">Skip to main content</a>
-  <div class="header-wrap">
-    <div class="header-inner">
-      <div class="header-brand">
-        <a href="index.html">
-          <div class="header-brand-inner bg-rc-dive">
-            <img alt="Real Change" class="header-brand-logo" height="63" src="assets/real-change-logo-x2.png" width="55">
-          </div>
-          <div class="header-brand-subtitle">Wigan &amp; Leigh</div>
-        </a>
-      </div>
-      {{#if header__nav}}
-      <nav class="header-body" role="navigation" aria-labelledby="nav-site">
-        <h2 class="sr-only" id="nav-site">Site navigation</h2>
-        <ul class="header-nav">
-          <li{{#if header_nav_howitworks}} class="header-nav-active"{{/if}}><a href="page-howitworks.html">How it works</a></li>
-          <li{{#if header_nav_howtoapply}} class="header-nav-active"{{/if}}><a href="page-howtoapply.html">How to apply</a></li>
-          <li{{#if header_nav_getinvolved}} class="header-nav-active"{{/if}}><a href="page-getinvolved.html">Get involved</a></li>
-          {{!-- <li{{#if header_nav_casestudies}} class="header-nav-active"{{/if}}><a href="page-stories.html">Stories</a></li> --}}
-          {{!-- <li{{#if header_nav_contact}} class="header-nav-active"{{/if}}><a href="page-about.html">Contact</a></li> --}}
-          <li class="header-nav-donate"><a class="button" href="#" target="_blank">Donate</a></li>
-        </ul>
-      </nav>
-      {{/if}}
-      {{#if header__hero}}
-      <div class="header-hero">
-        <h1 class="header-hero-title">{{{ header__hero__text }}}</h1>
-      </div>
-      {{/if}}
+  <div class="header-inner">
+    <div class="header-brand">
+      <a href="index.html"><img alt="Real Help" class="header-brand-logo" height="38" src="assets/doncaster-proud-to-care-logo.png" width="171"></a>
     </div>
+    {{#if header__nav}}
+    <nav class="header-body" role="navigation" aria-labelledby="nav-site">
+      <h2 class="sr-only" id="nav-site">Site navigation</h2>
+      <ul class="header-nav">
+        <li{{#if header_nav_howitworks}} class="header-nav-active"{{/if}}><a href="page-howitworks.html">How it works</a></li>
+        <li{{#if header_nav_howtoapply}} class="header-nav-active"{{/if}}><a href="page-howtoapply.html">How to apply</a></li>
+        <li{{#if header_nav_getinvolved}} class="header-nav-active"{{/if}}><a href="page-getinvolved.html">Get involved</a></li>
+        {{!-- <li{{#if header_nav_casestudies}} class="header-nav-active"{{/if}}><a href="page-stories.html">Stories</a></li> --}}
+        <li class="header-nav-donate"><a class="button button-primary" href="#" target="_blank">Donate</a></li>
+      </ul>
+    </nav>
+    {{/if}}
   </div>
 </header>
