--- a/hugo/assets/realhelp.css
+++ b/hugo/assets/realhelp.css
@@ -298,37 +298,43 @@ p + .button { margin-top: 1rem; }
 
 .content > :last-child { margin-bottom: 0; }
 
-.footer { background-color: #FFFFFF; }
+.footer { background-color: #FFFFFF; font-size: 1.0rem; padding: 0.625rem; }
 
-.footer a { font-weight: 700; }
+@media (min-width: 340px) { .footer { font-size: 1.125rem; } }
 
-.footer-inner { max-width: 840px; margin-left: auto; margin-right: auto; width: 100%; max-width: 836px; padding: 1rem 0.75rem; }
+.footer a { color: #FFE500; font-weight: 700; }
 
-@media (min-width: 576px) { .footer-inner { padding: 1.5rem 1rem; } }
+.footer-inner { background-color: #3B3B3B; background-image: url(assets/highstreet.jpg); background-position: 50% 80%; background-size: cover; background-repeat: no-repeat; color: #FFFFFF; max-width: 840px; margin-left: auto; margin-right: auto; width: 100%; max-width: 1004px; padding: 1rem; }
 
-@media (min-width: 768px) { .footer-inner { padding: 3rem 1rem 2rem; } }
+@media (min-width: 768px) { .footer-inner { background-position: 50% 70%; background-size: 1304px 500px; padding: 1.5rem; } }
 
-@media (min-width: 868px) { .footer-inner { padding-left: 0; padding-right: 0; } }
+@media (min-width: 576px) { .footer-split { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; } }
 
-.footer-split { margin-bottom: 1rem; }
+.footer-brand { -ms-flex-item-align: end; align-self: flex-end; padding: 0.625rem 0; }
 
-@media (min-width: 576px) { .footer-split { -webkit-box-align: start; -ms-flex-align: start; align-items: flex-start; display: -webkit-box; display: -ms-flexbox; display: flex; margin-bottom: 2rem; } }
+.footer-brand-logo { height: auto; max-width: 100%; }
 
-.footer-brand { -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; }
+@media (min-width: 992px) { .footer-brand-logo { margin-left: 1rem; } }
 
-.footer-brand-logo { max-width: 100%; }
+.footer-body { font-weight: 300; margin-top: 2rem; }
 
-.footer-body { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; font-weight: 300; margin-bottom: 2rem; -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; }
+@media (min-width: 576px) { .footer-body { margin-left: 4rem; margin-top: 0; max-width: 28rem; } }
 
-@media (min-width: 576px) { .footer-body { margin-bottom: 0; } }
+@media (min-width: 768px) { .footer-body { max-width: 38rem; } }
 
-.footer-body .h2 { margin-bottom: 0.25rem; }
+@media (min-width: 992px) { .footer-body { margin-right: 1rem; } }
 
-.footer-body p { margin-bottom: 0; }
+.footer-body p { margin-bottom: 0.25rem; }
 
-.footer-info { font-size: 0.875rem; }
+.footer-body-title { font-size: 2.125rem; margin-bottom: 0.5rem; }
 
-.footer-info a { margin-left: 0.25rem; margin-right: 0.25rem; }
+@media (max-width: 767.98px) { .footer-body-title { position: absolute; width: 1px; height: 1px; padding: 0; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0; } }
+
+.footer-info { font-size: 0.875rem; margin: 2rem 0 1rem; }
+
+@media (min-width: 576px) { .footer-info { margin: 1rem 0 0; } }
+
+.footer-info a { margin: 0 0.25rem; }
 
 .footer-info > :last-child { margin-bottom: 0; }
 
