--- a/hugo/layouts/partials/footer.html
+++ b/hugo/layouts/partials/footer.html
@@ -1,22 +1,18 @@
-<footer class="footer footer-withcityscape{{ if .classes }} {{ .classes }}{{ end }}">
+<footer class="footer">
   <div class="footer-inner">
     <div class="footer-split">
+      <div class="footer-brand">
+        <img alt="Proud of Doncaster Proud to Care" class="footer-brand-logo" height="57" src="/assets/doncaster-proud-to-care-logo-white.png" width="253">
+      </div>
       <div class="footer-body">
-        <h3 class="h2">{{ .footer.Params.title }}</h3>
+        <h3 class="footer-body-title">{{ .footer.Params.title }}</h3>
         <p>{{ .footer.Params.row1 | markdownify | safeHTML }}</p>
         <p>{{ .footer.Params.row2 | markdownify | safeHTML }}</p>
         <p>{{ .footer.Params.row3 | markdownify | safeHTML }}</p>
-      </div>
-      <div class="footer-brand">
-        <div class="footer-brand-inner">
-          <img alt="Real Change" class="footer-brand-logo" height="63" src="/assets/real-change-logo-x2.png" width="55">
+        <div class="footer-info" role="contentinfo">
+          <p>&copy; {{ dateFormat "2006" now }} Real Change {{ .footer.Params.links | markdownify | safeHTML }}</p>
         </div>
-        <div class="footer-brand-subtitle">Wigan &amp; Leigh</div>
       </div>
-    </div>
-    <div class="footer-info" role="contentinfo">
-      <p>&copy; {{ dateFormat "2006" now }} Real Change {{ .footer.Params.links | markdownify | safeHTML }}</p>
     </div>
   </div>
 </footer>
-<!-- Icons made by https://www.flaticon.com/authors/hand-drawn-goods Hand Drawn Goods is licensed by CC 3.0 BY -->
