--- a/templates/src/_components/footer/_footer.scss
+++ b/templates/src/_components/footer/_footer.scss
@@ -3,164 +3,104 @@
 
 .footer {
   background-color: $color-white;
+  font-size: $font-size-md;
+  padding: 0.625rem; // 10px
+
+  @media (min-width: $breakpoint-mobile-small) {
+    font-size: $font-size-base;
+  }
 
   a {
+    color: $color-rh-yellow;
     font-weight: $font-weight-bold;
   }
 }
 
 .footer-inner {
-  @include container;
-  max-width: 836px;
-  padding: 1rem 0.75rem;
+  background-color: #3B3B3B;
+  background-image: url(assets/highstreet.jpg); // 1304 x 500
+  background-position: 50% 80%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: $color-white;
 
-  @include media-breakpoint-up(sm) {
-    padding: 1.5rem 1rem;
-  }
+  @include container;
+  max-width: 1004px;
+  padding: 1rem; // 16px
 
   @include media-breakpoint-up(md) {
-    padding: 3rem 1rem 2rem;
-  }
-
-  @media (min-width: 868px) {
-    padding-left: 0;
-    padding-right: 0;
+    background-position: 50% 70%;
+    background-size: 1304px 500px;
+    padding: 1.5rem; // 24px
   }
 }
 
 .footer-split {
-  margin-bottom: 1rem;
-
   @include media-breakpoint-up(sm) {
-    align-items: flex-start;
     display: flex;
-    margin-bottom: 2rem;
+    justify-content: space-between;
   }
 }
 
 .footer-brand {
-  order: 1;
-  max-width: 170px;
-}
-
-.footer-brand-inner {
-  display: inline-flex;
-  width: 65px;
-
-  @include media-breakpoint-up(sm) {
-    width: 120px;
-  }
-
-  @include media-breakpoint-up(md) {
-    width: 170px;
-  }
+  align-self: flex-end;
+  padding: 0.625rem 0;
 }
 
 .footer-brand-logo {
-  height: 63px;
+  height: auto;
   max-width: 100%;
-  width: 55px;
 
-  @include media-breakpoint-up(sm) {
-    height: 94px;
-    width: 82px;
-  }
-
-  @include media-breakpoint-up(md) {
-    height: 110px;
-    width: 96px;
-  }
-}
-
-.footer-brand-subtitle {
-  font-family: $font-family-rc-lunchbox;
-  font-size: $font-size-xs;
-  font-weight: $font-weight-bold;
-
-  @include media-breakpoint-up(sm) {
-    font-size: $font-size-sm;
-  }
-
-  @include media-breakpoint-up(md) {
-    font-size: $font-size-base;
+  @include media-breakpoint-up(lg) {
+    margin-left: 1rem;
   }
 }
 
 .footer-body {
-  flex: 1;
   font-weight: $font-weight-light;
-  margin-bottom: 2rem;
-  order: 2;
+  margin-top: 2rem;
 
   @include media-breakpoint-up(sm) {
-    margin-bottom: 0;
+    margin-left: 4rem;
+    margin-top: 0;
+    max-width: 28rem;
   }
 
-  .h2 {
-    margin-bottom: 0.25rem;
+  @include media-breakpoint-up(md) {
+    max-width: 38rem;
+  }
+
+  @include media-breakpoint-up(lg) {
+    margin-right: 1rem;
   }
 
   p {
-    margin-bottom: 0;
+    margin-bottom: 0.25rem;
   }
 }
 
-.footer-body-icon {
-  padding-left: 1.75rem;
-  position: relative;
+.footer-body-title {
+  font-size: 2.125rem; // 34px
+  margin-bottom: 0.5rem;
 
-  svg {
-    color: $color-rc-dive;
-    fill: currentColor;
-    left: 0;
-    position: absolute;
-    top: 4px;
+  @include media-breakpoint-down(sm) {
+    @include sr-only();
   }
 }
 
 .footer-info {
   font-size: $font-size-sm;
+  margin: 2rem 0 1rem;
+
+  @include media-breakpoint-up(sm) {
+    margin: 1rem 0 0;
+  }
 
   a {
-    margin-left: 0.25rem;
-    margin-right: 0.25rem;
+    margin: 0 0.25rem;
   }
 
   > :last-child {
     margin-bottom: 0;
-  }
-}
-
-.footer-withcityscape {
-  padding-top: 0.5rem;
-  position: relative;
-
-  @include media-breakpoint-up(sm) {
-    padding-top: 2rem;
-  }
-
-  &:before {
-    background-image: url(assets/footer-cityscape.png);
-    background-repeat: repeat-x;
-    background-position: 50% 2px;
-    content: "";
-    display: block;
-    height: 64px;
-    left: 0;
-    position: absolute;
-    top: -64px;
-    width: 100%;
-    right: 0;
-  }
-}
-
-// Apply this to the element preceding the .footer-withcityscape
-.pre-footer-withcityscape {
-  padding-bottom: 4.5rem !important;
-
-  &.section {
-    @include media-breakpoint-up(lg) {
-      padding-bottom: 6.5rem !important;
-    }
   }
 }
