--- a/templates/src/_components/footer/footer.hbs
+++ b/templates/src/_components/footer/footer.hbs
@@ -1,32 +1,22 @@
-<footer class="footer{{#if footer__classes}} {{footer__classes}}{{/if}}">
+<footer class="footer">
   <div class="footer-inner">
-    {{#if footer__bodyorlogo}}<div class="footer-split">
-      {{#if footer__body}}
-      <div class="footer-body">
-        <h3 class="h2">Other ways you can help</h3>
-        <p>
-          Share us on <a href="#" target="_blank">Facebook</a> and <a href="#" target="_blank">Twitter</a>
-        </p>
-        <p>
-          Visit <a href="#" target="_blank">Street Support</a> to see what else you can give.
-        </p>
-        <p>
-          Find out how your business can apply for <a href="#">Corporate partnership</a>
-        </p>
-      </div>
-      {{/if}}
+    <div class="footer-split">
       {{#if footer__logo}}
       <div class="footer-brand">
-        <div class="footer-brand-inner">
-          <img alt="Real Change" class="footer-brand-logo" height="63" src="assets/real-change-logo-x2.png" width="55">
-        </div>
-        <div class="footer-brand-subtitle">Wigan &amp; Leigh</div>
+        <img alt="Real Help" class="footer-brand-logo" height="57" src="assets/doncaster-proud-to-care-logo-white.png" width="253">
       </div>
       {{/if}}
-    </div>{{/if}}
-    <div class="footer-info" role="contentinfo">
-      <p>&copy; 2018 Real Change <a href="page-privacy.html">Privacy Policy</a> <span class="sr-only">:</span><a href="#">Sitemap</a></p>
+      <div class="footer-body">
+        {{#if footer__body}}
+        <h3 class="footer-body-title">Other ways you can help</h3>
+        <p>Share us on <a href="#" target="_blank">Facebook</a> and <a href="#" target="_blank">Twitter</a></p>
+        <p>Visit <a href="#" target="_blank">Street Support</a> to see what else you can give.</p>
+        <p>Find out how your business can apply for <a href="#">Corporate partnership</a></p>
+        {{/if}}
+        <div class="footer-info" role="contentinfo">
+          <p>&copy; 2018 Real Help <a href="page-privacy.html">Privacy Policy</a>{{!--  <span class="sr-only">:</span><a href="#">Sitemap</a> --}}</p>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
-<!–– Icons made by https://www.flaticon.com/authors/hand-drawn-goods Hand Drawn Goods is licensed by CC 3.0 BY -->
