Update all instances of header

--- a/templates/src/pages/page-casestudy.hbs
+++ b/templates/src/pages/page-casestudy.hbs
@@ -2,13 +2,7 @@
 title: "Jack’s Story"
 layout: default
 ---
-{{> header
-  header__classes=""
-  header__style="background-image: url(assets/uploads/header-worldcap.jpg);"
-  header__nav=true
-  header__hero=true
-  header__hero__text='Real Help in Wigan &amp; Leigh <strong> Jack’s Story</strong>'
-}}
+{{> header header__nav=true }}
 
 <div id="main">
   <article class="section casestudy">
