--- a/templates/src/pages/page-content.hbs
+++ b/templates/src/pages/page-content.hbs
@@ -2,12 +2,7 @@
 title: "Content"
 layout: default
 ---
-{{> header
-  header__classes=""
-  header__nav=true
-  header__hero=true
-  header__hero__text='Content Page'
-}}
+{{> header header__nav=true }}
 
 <div id="main">
   <div class="section">
