--- a/templates/src/pages/page-getinvolved.hbs
+++ b/templates/src/pages/page-getinvolved.hbs
@@ -3,13 +3,7 @@ title: "Get Involved"
 layout: default
 header_nav_getinvolved: true
 ---
-{{> header
-  header__classes=""
-  header__style=false
-  header__nav=true
-  header__hero=true
-  header__hero__text='Real Change in Wigan &amp; Leigh <strong>Get Involved</strong>'
-}}
+{{> header header__nav=true }}
 
 <div id="main">
   <div class="section">
