--- a/templates/src/pages/page-privacy.hbs
+++ b/templates/src/pages/page-privacy.hbs
@@ -2,12 +2,7 @@
 title: "Privacy Policy"
 layout: default
 ---
-{{> header
-  header__classes=""
-  header__nav=true
-  header__hero=true
-  header__hero__text='Privacy Policy'
-}}
+{{> header header__nav=true }}
 
 <div id="main">
   <div class="section">
