--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -3,13 +3,7 @@ title: "How it Works"
 layout: default
 header_nav_howitworks: true
 ---
-{{> header
-  header__classes=""
-  header__style=false
-  header__nav=true
-  header__hero=true
-  header__hero__text='Real Change in Wigan &amp; Leigh <strong>How it Works</strong>'
-}}
+{{> header header__nav=true }}
 
 <div id="main">
   <div class="section">
