--- a/templates/src/pages/page-howtoapply.hbs
+++ b/templates/src/pages/page-howtoapply.hbs
@@ -3,13 +3,7 @@ title: "How to Apply"
 layout: default
 header_nav_howtoapply: true
 ---
-{{> header
-  header__classes=""
-  header__style=false
-  header__nav=true
-  header__hero=true
-  header__hero__text='Real Change in Wigan &amp; Leigh <strong> How to Apply</strong>'
-}}
+{{> header header__nav=true }}
 
 <div id="main">
   <div class="section">
