--- a/templates/src/pages/page-stories.hbs
+++ b/templates/src/pages/page-stories.hbs
@@ -3,13 +3,7 @@ title: "Stories"
 layout: default
 header_nav_casestudies: true
 ---
-{{> header
-  header__classes=""
-  header__style=false
-  header__nav=true
-  header__hero=true
-  header__hero__text='Real Change in Wigan &amp; Leigh <strong>Stories</strong>'
-}}
+{{> header header__nav=true }}
 
 <div id="main">
   <div class="section">
