--- a/templates/src/_components/footer/footer.hbs
+++ b/templates/src/_components/footer/footer.hbs
@@ -1,4 +1,4 @@
-<footer class="footer">
+  <footer class="footer">
   <div class="footer-inner">
     <div class="footer-split">
       {{#if footer__logo}}
@@ -10,8 +10,8 @@
         {{#if footer__body}}
         <h3 class="footer-body-title">Other ways you can help</h3>
         <p>Share us on <a href="#" target="_blank">Facebook</a> and <a href="#" target="_blank">Twitter</a></p>
-        <p>Visit <a href="#" target="_blank">Street Support</a> to see what else you can give.</p>
-        <p>Find out how your business can apply for <a href="#">Corporate partnership</a></p>
+        <p>Arrange a fundraising event and link to our <a href="#" target="_blank">justgiving campaign</a></p>
+        <p>Find out how your business or workplace can become a <a href="#">Real Help Partner</a></p>
         {{/if}}
         <div class="footer-info" role="contentinfo">
           <p>&copy; 2018 Real Help <a href="page-privacy.html">Privacy Policy</a>{{!--  <span class="sr-only">:</span><a href="#">Sitemap</a> --}}</p>
