--- a/templates/src/pages/page-casestudy.hbs
+++ b/templates/src/pages/page-casestudy.hbs
@@ -45,4 +45,4 @@ layout: default
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
+{{> footer footer__body="true" footer__logo="true" }}
