--- a/templates/src/pages/page-stories.hbs
+++ b/templates/src/pages/page-stories.hbs
@@ -49,4 +49,4 @@ header_nav_casestudies: true
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
+{{> footer footer__body="true" footer__logo="true" }}
