--- a/templates/src/pages/page-content.hbs
+++ b/templates/src/pages/page-content.hbs
@@ -34,4 +34,4 @@ layout: default
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
+{{> footer footer__body="true" footer__logo="true" }}
