--- a/templates/src/pages/page-getinvolved.hbs
+++ b/templates/src/pages/page-getinvolved.hbs
@@ -36,4 +36,4 @@ header_nav_getinvolved: true
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
+{{> footer footer__body="true" footer__logo="true" }}
