--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -112,4 +112,4 @@ header_nav_home: true
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
+{{> footer footer__body="true" footer__logo="true" }}
