--- a/templates/src/pages/styleguide-footer.hbs
+++ b/templates/src/pages/styleguide-footer.hbs
@@ -15,13 +15,14 @@ layout: styleguide
   <section class="styleguide-section">
     <div class="styleguide-intro">
       <h1>Footer</h1>
-      <p>The footer can be displayed with or without the "Cityscape".</p>
+      <p>The footer can be displayed with or without the logo, body but is always visible with copyright and links.</p>
     </div>
   </section>
 
 </div>
 
   <section class="styleguide-section">
+
     <h3 class="styleguide-h3">Footer with only copyright and links</h3>
     <div class="styleguide-example">
 {{> footer }}
@@ -29,44 +30,61 @@ layout: styleguide
     <div class="styleguide-code">
       <pre><code>&#x3C;footer class=&#x22;footer&#x22;&#x3E;
   &#x3C;div class=&#x22;footer-inner&#x22;&#x3E;
-    &#x3C;div class=&#x22;footer-info&#x22; role=&#x22;contentinfo&#x22;&#x3E;
-      &#x3C;p&#x3E;&#xA9; 2018 Real Change &#x3C;a href=&#x22;#&#x22;&#x3E;Privacy Policy&#x3C;/a&#x3E; &#x3C;span class=&#x22;sr-only&#x22;&#x3E;:&#x3C;/span&#x3E;&#x3C;a href=&#x22;#&#x22;&#x3E;Sitemap&#x3C;/a&#x3E;&#x3C;/p&#x3E;
+    &#x3C;div class=&#x22;footer-split&#x22;&#x3E;
+      &#x3C;div class=&#x22;footer-body&#x22;&#x3E;
+        &#x3C;div class=&#x22;footer-info&#x22; role=&#x22;contentinfo&#x22;&#x3E;
+          &#x3C;p&#x3E;&#xA9; 2018 Real Help &#x3C;a href=&#x22;#&#x22;&#x3E;Privacy Policy&#x3C;/a&#x3E;&#x3C;/p&#x3E;
+        &#x3C;/div&#x3E;
+      &#x3C;/div&#x3E;
     &#x3C;/div&#x3E;
   &#x3C;/div&#x3E;
 &#x3C;/footer&#x3E;</code></pre>
     </div>
 
-    <h3 class="styleguide-h3">Footer with Brand and Body</h3>
+    <h3 class="styleguide-h3">Footer with brand and copyright</h3>
     <div class="styleguide-example">
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" }}
+{{> footer footer__logo="true" }}
     </div>
     <div class="styleguide-code">
       <pre><code>&#x3C;footer class=&#x22;footer&#x22;&#x3E;
   &#x3C;div class=&#x22;footer-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;footer-split&#x22;&#x3E;
-      &#x3C;div class=&#x22;footer-body&#x22;&#x3E;
-        &#x3C;h3 class=&#x22;h2&#x22;&#x3E;Other ways you can help&#x3C;/h3&#x3E;
-        &#x3C;p&#x3E;
-          Share us on &#x3C;a href=&#x22;#&#x22; target=&#x22;_blank&#x22;&#x3E;Facebook&#x3C;/a&#x3E; and &#x3C;a href=&#x22;#&#x22; target=&#x22;_blank&#x22;&#x3E;Twitter&#x3C;/a&#x3E;
-        &#x3C;/p&#x3E;
-        &#x3C;p&#x3E;
-          Visit &#x3C;a href=&#x22;#&#x22; target=&#x22;_blank&#x22;&#x3E;Street Support&#x3C;/a&#x3E; to see what else you can give.
-        &#x3C;/p&#x3E;
-        &#x3C;p&#x3E;
-          Find out how your business can apply for &#x3C;a href=&#x22;#&#x22;&#x3E;Corporate partnership&#x3C;/a&#x3E;
-        &#x3C;/p&#x3E;
-      &#x3C;/div&#x3E;
       &#x3C;div class=&#x22;footer-brand&#x22;&#x3E;
-        &#x3C;div class=&#x22;footer-brand-inner&#x22;&#x3E;
-          &#x3C;img alt=&#x22;Real Change&#x22; class=&#x22;footer-brand-logo&#x22; height=&#x22;63&#x22; src=&#x22;assets/real-change-logo-x2.png&#x22; width=&#x22;55&#x22;&#x3E;
-        &#x3C;/div&#x3E;
-        &#x3C;div class=&#x22;footer-brand-subtitle&#x22;&#x3E;Wigan &#x26;amp; Leigh&#x3C;/div&#x3E;
+        &#x3C;img alt=&#x22;Real Help&#x22; class=&#x22;footer-brand-logo&#x22; height=&#x22;57&#x22; src=&#x22;assets/doncaster-proud-to-care-logo-white.png&#x22; width=&#x22;253&#x22;&#x3E;
       &#x3C;/div&#x3E;
-    &#x3C;/div&#x3E;
-    &#x3C;div class=&#x22;footer-info&#x22; role=&#x22;contentinfo&#x22;&#x3E;
-      &#x3C;p&#x3E;&#xA9; 2018 Real Change &#x3C;a href=&#x22;#&#x22;&#x3E;Privacy Policy&#x3C;/a&#x3E; &#x3C;span class=&#x22;sr-only&#x22;&#x3E;:&#x3C;/span&#x3E;&#x3C;a href=&#x22;#&#x22;&#x3E;Sitemap&#x3C;/a&#x3E;&#x3C;/p&#x3E;
+      &#x3C;div class=&#x22;footer-body&#x22;&#x3E;
+        &#x3C;div class=&#x22;footer-info&#x22; role=&#x22;contentinfo&#x22;&#x3E;
+          &#x3C;p&#x3E;&#xA9; 2018 Real Help &#x3C;a href=&#x22;#&#x22;&#x3E;Privacy Policy&#x3C;/a&#x3E;&#x3C;/p&#x3E;
+        &#x3C;/div&#x3E;
+      &#x3C;/div&#x3E;
     &#x3C;/div&#x3E;
   &#x3C;/div&#x3E;
 &#x3C;/footer&#x3E;</code></pre>
     </div>
+
+    <h3 class="styleguide-h3">Footer with brand, body and copyright</h3>
+    <div class="styleguide-example">
+{{> footer footer__body="true" footer__logo="true" }}
+    </div>
+    <div class="styleguide-code">
+      <pre><code>&#x3C;footer class=&#x22;footer&#x22;&#x3E;
+  &#x3C;div class=&#x22;footer-inner&#x22;&#x3E;
+    &#x3C;div class=&#x22;footer-split&#x22;&#x3E;
+      &#x3C;div class=&#x22;footer-brand&#x22;&#x3E;
+        &#x3C;img alt=&#x22;Real Help&#x22; class=&#x22;footer-brand-logo&#x22; height=&#x22;57&#x22; src=&#x22;assets/doncaster-proud-to-care-logo-white.png&#x22; width=&#x22;253&#x22;&#x3E;
+      &#x3C;/div&#x3E;
+      &#x3C;div class=&#x22;footer-body&#x22;&#x3E;
+        &#x3C;h3 class=&#x22;footer-body-title&#x22;&#x3E;Other ways you can help&#x3C;/h3&#x3E;
+        &#x3C;p&#x3E;Share us on &#x3C;a href=&#x22;#&#x22; target=&#x22;_blank&#x22;&#x3E;Facebook&#x3C;/a&#x3E; and &#x3C;a href=&#x22;#&#x22; target=&#x22;_blank&#x22;&#x3E;Twitter&#x3C;/a&#x3E;&#x3C;/p&#x3E;
+        &#x3C;p&#x3E;Arrange a fundraising event and link to our &#x3C;a href=&#x22;#&#x22; target=&#x22;_blank&#x22;&#x3E;justgiving campaign&#x3C;/a&#x3E;&#x3C;/p&#x3E;
+        &#x3C;p&#x3E;Find out how your business or workplace can become a &#x3C;a href=&#x22;#&#x22;&#x3E;Real Help Partner&#x3C;/a&#x3E;&#x3C;/p&#x3E;
+        &#x3C;div class=&#x22;footer-info&#x22; role=&#x22;contentinfo&#x22;&#x3E;
+          &#x3C;p&#x3E;&#xA9; 2018 Real Help &#x3C;a href=&#x22;#&#x22;&#x3E;Privacy Policy&#x3C;/a&#x3E;&#x3C;/p&#x3E;
+        &#x3C;/div&#x3E;
+      &#x3C;/div&#x3E;
+    &#x3C;/div&#x3E;
+  &#x3C;/div&#x3E;
+&#x3C;/footer&#x3E;</code></pre>
+    </div>
+
   </section>
