New Grey and adjust H1 sizing

--- a/templates/src/css/sass/utilities/_backgrounds.scss
+++ b/templates/src/css/sass/utilities/_backgrounds.scss
@@ -6,6 +6,7 @@
 .bg-rh-black { background-color: $color-rh-black !important; }
 .bg-rh-blue { background-color: $color-rh-blue !important; }
 .bg-rh-yellow { background-color: $color-rh-yellow !important; }
+.bg-rh-grey-light { background-color: $color-rh-grey-light !important; }
 .bg-primary { background-color: $color-primary !important; }
 
 .bg-rh-black,
