--- a/templates/src/css/sass/utilities/_text.scss
+++ b/templates/src/css/sass/utilities/_text.scss
@@ -44,4 +44,5 @@
 .text-rh-black { color: $color-rh-black !important; }
 .text-rh-blue { color: $color-rh-blue !important; }
 .text-rh-yellow { color: $color-rh-yellow !important; }
+.text-rh-grey-light { color: $color-rh-grey-light !important; }
 .text-primary { color: $color-primary !important; }
