--- a/templates/src/css/sass/_variables.scss
+++ b/templates/src/css/sass/_variables.scss
@@ -24,6 +24,7 @@ $color-border: #E3E3E3;
 $color-rh-black: #1D1D1C;
 $color-rh-yellow: #FFE500;
 $color-rh-blue: #2F87C8;
+$color-rh-grey-light: #F5F5F5;
 $color-primary: $color-rh-yellow;
 
 //
@@ -102,10 +103,10 @@ $headings-font-family: $font-family-rh-colaborate, $font-family-sans-serif;
 $headings-font-weight: 700;
 $headings-margin-bottom: 0.5rem;
 
-$h1-font-size: ($font-size-base * 2.6666666667); // 48px
-$h1-font-size-md: ($font-size-base * 2.6666666667); // 48px
-$h1-line-height: 1.125; // 54px
-$h1-line-height-md: 1.125; // 54px
+$h1-font-size: ($font-size-base * 2.222222222); // 40px
+$h1-font-size-md: ($font-size-base * 2.222222222); // 40px
+$h1-line-height: 1.2; // 48px
+$h1-line-height-md: 1.2; // 48px
 
 $h2-font-size: ($font-size-base * 1.6666666667); // 30px
 $h2-font-size-md: ($font-size-base * 1.6666666667); // 30px
